--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guess the Number Game by Arnab Mann</title>
+    <title>Guess the Number Game by Arnab Manna</title>
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
