--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guess the Number Game by Arnab Mann</title>
+    <title>Guess Number Game by Arnab Manna</title>
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
                 <p id="proximityHint"></p>
                 <p id="randomHint"></p>
             </div>
-            <input type="button" value="Start New Game" id="newGameButton" style="display:none;">
+            <input type="button" value="Start New Game" id="newGameButton" style="display:none; font-family: monospace;">
         </div>
     </div> 
     <script src="../JS/index.js"></script>
